[package]
name = "urlsnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.193"
serde_json = "1.0.108"
image = "0.24.7"
axum = "0.7.2"