[package]
name = "urlsnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.193"
serde_json = "1.0.108"
image = {version = "0.24", features = ["default", "webp-encoder"]}
axum = "0.7.2"
async-compression = { version = "0.4", features = ["all"] }
strum = { version = "0.25", features = ["derive"] }
tower-http = { version = "0.5", features = ["full"]}
tower = "0.4"
hyper = "1.0"
percent-encoding = "2.3"
anyhow = "1.0"
thiserror = "1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tracing = "0.1.40"
async-trait = "0.1"

[dev-dependencies]
rand = "0.8"